fix: disable horizontal scrolling

--- a/launcher-gui/src/index.css
+++ b/launcher-gui/src/index.css
@@ -117,7 +117,7 @@ All colors MUST be HSL.
   }
 
   body {
-    @apply bg-background text-foreground font-mono;
+    @apply bg-background text-foreground font-mono overflow-x-hidden;
     background-image: var(--gradient-mining);
   }
 
